# guts

./: .restyled.yaml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml  seq.gs
cmake/: Findclang.cmake  Findllvm.cmake  LoadLLVM.cmake
include/: app.h  ds.h  ev.h  fe.h  fs.h  jay.h  lex.h  m.h  mem.h  nt.h  sys.h  uerr.h  ufs.h
include/app/: opt.h
include/cor/: nullable.h
include/ds/: deq.h  dstr.h  hash.h  map.h  math.h  seq.h  set.h  str.h  vec.h
include/ev/: obs.h
include/fe/: c.h
include/fe/c/: lex.h  macro.h  pp.h  toks.h
include/fs/: conf.h  defs.h  fd.h  file.h  fs.h  ifstream.h  imstream.h  istream.h  mod.h  ofstream.h  omstream.h  op.h  ostream.h  path.h  stream.h
include/guts/: cor.h
include/guts/cor/: ty.h
include/guts/ds/: map.h
include/guts/m/: cmp.h  hash.h  pow.h
include/il/: be.h  ctx.h  fe.h  lexer.h  lib.h  loc.h  src.h  tok.h  ty.h
include/il/ty/: const.h  kind.h  ty.h
include/il/ty/const/: kind.h  str.h
include/lex/: ex.h  lexer.h  loc.h  src.h  tok.h  tokval.h  val.h
include/m/: eq.h
include/mem/: alloc.h  ator.h  ops.h
include/mem/ator/: base.h  linear.h  lockfree.h
include/nt/: arch.h  cc.h  cpu.h  defs.h  err.h  ex.h  exts.h  hash.h  incs.h  math.h  os.h  plat.h  pp.h  tys.h  verno.h
include/nt/err/: lvl.h  no.h  ret.h
include/nt/ex/: ex.h  inval.h  lvl.h  nimpl.h  tryenv.h
include/nt/ex/inval/: enum.h
include/sys/: arch.h  attr.h  builtin.h  cc.h  cpu.h  defs.h  err.h  exts.h  ftures.h  incs.h  kw.h  libc.h  libs.h  os.h  plat.h  pp.h  std.h  tys.h  verno.h
include/sys/err/: lvl.h  no.h  ret.h
include/ulex/: loc.h  src.h  val.h
lib/: CMakeLists.txt
lib/compat/: CMakeLists.txt
lib/compat/include/: compat.h
lib/compat/include/compat/: arch.h  compiler.h  conf.h.in  cpu.h  defs.h  feature.h  os.h  platform.h  preprocessor.h  string.h  types.h  verno.h
lib/compat/src/: string.c
lib/compat/test/: CMakeLists.txt  string_bzero.c
lib/ds/: CMakeLists.txt  Makefile
lib/ds/cmake/: Config.cmake.in
lib/ds/include/ds/: deque.h  sequence.h
lib/guts/: CMakeLists.txt  Makefile
lib/guts/include/: guts.h
lib/guts/include/guts/: conf.h.in  hir.h
lib/guts/include/guts/hir/: ast.h  entity.h  expr.h  fe.h  generic.h  ir.h  lexer.h  literal.h  parser.h  scope.h  stmt.h  token.h  type.h
lib/guts/src/: hir.c
lib/guts/src/hir/: ast.c  entity.c  expr.c  fe.c  generic.c  ir.c  lexer.c  literal.c  parser.c  scope.c  stmt.c  token.c  type.c
lib/guts/test/: CMakeLists.txt  hir_expr.c  hir_fe_expr.c  hir_fe_lex.c  hir_lexer.c  hir_parser.c  hir_scope.c  hir_stmt.c  hir_type.c
lib/il/: CMakeLists.txt  Makefile  README.md
lib/il/include/il/: conf.h.in  diagnostic.h  span.h
lib/il/src/: codemap.c  diagnostic.c  source.c  span.c
lib/ir/: CMakeLists.txt  Makefile
lib/ir/include/: ir.h
lib/ir/include/ir/: codemap.h  conf.h.in  deque.h  diagnostic.h  filemap.h  frontend.h  loc.h  seq.h  source.h  span.h  vector.h
lib/ir/src/: codemap.c  diagnostic.c  filemap.c  frontend.c  loc.c  source.c  span.c  vector.c
lib/ir/test/: CMakeLists.txt  filemap_virtual.c  frontend_emit.c  source_virtual.c  vector_grow.c  vector_push.c
lib/termc/: CMakeLists.txt
lib/termc/include/: termc.h
lib/termc/include/termc/: color.h  conf.h.in  term.h
lib/termc/src/: color.c  term.c
lib/termc/test/: CMakeLists.txt  term_set.c  test.h
lib/termcolor/: CMakeLists.txt  Makefile
lib/termcolor/cmake/: Config.cmake.in
lib/termcolor/include/: termcolor.h
lib/termcolor/include/termcolor/: color.h  term.h
lib/wrap/: CMakeLists.txt  Makefile  README.md
lib/wrap/cmake/: Config.cmake.in
lib/wrap/include/wrap/: conf.h.in  cpu.h  defs.h  feature.h  os.h  preprocessor.h  string.h  verno.h
lib/wrap/src/: string.c
lib/wrap/test/: CMakeLists.txt  string_bzero.c  test.h
src/: CMakeLists.txt  compiler.c  entity.c  expr.c  ir.h  jay.c  main.c  opts.c  opts.h  program.c  symbol.c  symbol.h  token.c  token.h
src/adt/: deque.h  string.h  xmalloc.c
src/app/: opt.c
src/ds/: deq.c  dstr.c  map.cc  vec.c
src/ev/: obs.c
src/fe/c/: lex.c  macro.c  pp.c
src/frontend/: lexer.c  lexer.h  parser.c  parser.h
src/frontend/c/: c_parser.c  c_pp.c
src/fs/: fd.c  file.c  fs.c  ifstream.c  imstream.c  istream.c  ofstream.c  omstream.c  op.c  ostream.c  path.c  stream.c
src/guts/cor/: mod.cc
src/guts/ds/: map.cc
src/guts/m/: mod.cc
src/lex/: ex.c  lexer.c  src.c  tokval.c  val.c
src/mem/: alloc.c  ops.c
src/nt/ex/: ex.c  inval.c  nimpl.c  tryenv.c
src/nt/ex/inval/: enum.c
test/: CMakeLists.txt  cute.h
test/app/: opt.c
test/ds/: deq.c  dstr.c  map.c  map.cc  set.c  vec.c
test/ev/: obs.c
test/fe/: c_lex.c  input.txt
test/fs/: fd.c  file.c  istream.c  ostream.c  stream.c
test/guts/ds/: map.cc
test/lex/: c_lexer.c
test/mem/: ops.c
test/nt/: attrs.c  err.c  ex.c  tys.c
test/sys/: attrs.c  err.c  tys.c
tmp/: foo.gs  grammar.y
tools/: jayc.c
